corrected incomplete rule on line 5 to text-align: start

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    text-align: ;
+    text-align: start;
 }
 
 body {
